--- a/css/style.css
+++ b/css/style.css
@@ -1637,3 +1637,31 @@ h6 {
   background-image: url('../img/profile_girl.png');
   min-height: 100%;
 }
+.imgtesti{
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+
+}
+.myre{
+  padding-bottom: 24px;
+}
+.art_smoke1{
+  display: flex;
+  gap: 20px;
+}
+.div_padre{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+}
+.div_h2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  gap: 20px;
+}
