--- a/css/style.css
+++ b/css/style.css
@@ -2095,9 +2095,11 @@ color:#757575;
   text-align: center;
   background-color: black;
 }
+.art_tarjeta p:nth-child(8){
+  margin-block: 0px;
 
+}
 .art_p {
-  
   font-size: 15px;
   color:#757575 ;
   width: 275,9px;
@@ -2164,8 +2166,11 @@ padding: 15px;
 
 }
 #enviar{
+  color: black;
+  font-size: 15px;
   border: none;
 }
+/* ------------media query----------- */
 @media(max-width:390px){
   .tarjeta{
     display: flex;
@@ -2176,4 +2181,12 @@ padding: 15px;
   .art_tarjeta{
     width: 100%;
   }
+  .div_h2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
+  }
+  
 }
